fix: reorder repository section and clean up filename patterns in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "ultraview",
-  "name": "ultraview",
     "icon": "images/icon.png",
   "displayName": "Ultraview – Database & Markdown File Viewer",
   "description": "Instantly preview SQLite, DuckDB, Access, SQL dump files and Markdown directly from the file tree – no connection setup needed. (Ultraview)",
@@ -37,17 +36,13 @@
         }
       ]
     },
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/Da3n0n/UltraView.git"
-    },
     "views": {
       "ultraview-graph": [
         {
           "type": "webview",
           "id": "ultraview.codeGraph",
           "name": "Code Graph"
-        }   
+        }
       ]
     },
     "commands": [
@@ -62,18 +57,10 @@
         "viewType": "ultraview.sqlite",
         "displayName": "SQLite Viewer",
         "selector": [
-          {
-            "filenamePattern": "*.db"
-          },
-          {
-            "filenamePattern": "*.sqlite"
-          },
-          {
-            "filenamePattern": "*.sqlite3"
-          },
-          {
-            "filenamePattern": "*.db3"
-          }
+          { "filenamePattern": "*.db" },
+          { "filenamePattern": "*.sqlite" },
+          { "filenamePattern": "*.sqlite3" },
+          { "filenamePattern": "*.db3" }
         ],
         "priority": "default"
       },
@@ -81,12 +68,8 @@
         "viewType": "ultraview.duckdb",
         "displayName": "DuckDB Viewer",
         "selector": [
-          {
-            "filenamePattern": "*.duckdb"
-          },
-          {
-            "filenamePattern": "*.ddb"
-          }
+          { "filenamePattern": "*.duckdb" },
+          { "filenamePattern": "*.ddb" }
         ],
         "priority": "default"
       },
@@ -94,12 +77,8 @@
         "viewType": "ultraview.access",
         "displayName": "Access DB Viewer",
         "selector": [
-          {
-            "filenamePattern": "*.mdb"
-          },
-          {
-            "filenamePattern": "*.accdb"
-          }
+          { "filenamePattern": "*.mdb" },
+          { "filenamePattern": "*.accdb" }
         ],
         "priority": "default"
       },
@@ -107,27 +86,13 @@
         "viewType": "ultraview.sqldump",
         "displayName": "Ultraview: SQL Dump Viewer",
         "selector": [
-          {
-            "filenamePattern": "*.sql"
-          },
-          {
-            "filenamePattern": "*.sqlite.sql"
-          },
-          {
-            "filenamePattern": "*.mysql.sql"
-          },
-          {
-            "filenamePattern": "*.pg.sql"
-          },
-          {
-            "filenamePattern": "*.pgsql"
-          },
-          {
-            "filenamePattern": "*.dump"
-          },
-          {
-            "filenamePattern": "*.bak"
-          }
+          { "filenamePattern": "*.sql" },
+          { "filenamePattern": "*.sqlite.sql" },
+          { "filenamePattern": "*.mysql.sql" },
+          { "filenamePattern": "*.pg.sql" },
+          { "filenamePattern": "*.pgsql" },
+          { "filenamePattern": "*.dump" },
+          { "filenamePattern": "*.bak" }
         ],
         "priority": "default"
       },
@@ -135,15 +100,9 @@
         "viewType": "ultraview.markdown",
         "displayName": "Markdown Preview",
         "selector": [
-          {
-            "filenamePattern": "*.md"
-          },
-          {
-            "filenamePattern": "*.mdx"
-          },
-          {
-            "filenamePattern": "*.markdown"
-          }
+          { "filenamePattern": "*.md" },
+          { "filenamePattern": "*.mdx" },
+          { "filenamePattern": "*.markdown" }
         ],
         "priority": "default"
       },
@@ -151,19 +110,17 @@
         "viewType": "ultraview.index",
         "displayName": "Index File Viewer",
         "selector": [
-          {
-            "filenamePattern": "*.idx"
-          },
-          {
-            "filenamePattern": "*.index"
-          },
-          {
-            "filenamePattern": "*.ndx"
-          }
+          { "filenamePattern": "*.idx" },
+          { "filenamePattern": "*.index" },
+          { "filenamePattern": "*.ndx" }
         ],
         "priority": "default"
       }
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Da3n0n/UltraView.git"
   },
   "scripts": {
     "vscode:prepublish": "npm run package",
