--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "icon": "images/icon.png",
   "displayName": "Ultraview – Database & Markdown File Viewer",
   "description": "Instantly preview SQLite, DuckDB, Access, SQL dump files and Markdown directly from the file tree – no connection setup needed. (Ultraview)",
-  "version": "0.2.13",
+  "version": "0.2.16",
   "publisher": "Da3n0n",
   "engines": {
     "vscode": "^1.85.0"
@@ -27,6 +27,144 @@
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
+    "configuration": {
+      "title": "Ultraview",
+      "properties": {
+        "ultraview.markdown.defaultView": {
+          "type": "string",
+          "default": "preview",
+          "enum": [
+            "split",
+            "edit",
+            "preview"
+          ],
+          "enumDescriptions": [
+            "Split view with raw and rich",
+            "Raw markdown only",
+            "Rich preview only"
+          ],
+          "description": "Default view mode for markdown files"
+        },
+        "ultraview.markdown.style": {
+          "type": "string",
+          "default": "obsidian",
+          "enum": [
+            "obsidian",
+            "github"
+          ],
+          "enumDescriptions": [
+            "Obsidian-style markdown",
+            "GitHub-style markdown"
+          ],
+          "description": "Markdown preview style"
+        },
+        "ultraview.markdown.autoSave": {
+          "type": "boolean",
+          "default": true,
+          "description": "Auto-save markdown files while editing"
+        },
+        "ultraview.markdown.autoSaveDelay": {
+          "type": "number",
+          "default": 1000,
+          "description": "Delay in milliseconds before auto-saving"
+        },
+        "ultraview.markdown.fontSize": {
+          "type": "number",
+          "default": 14,
+          "description": "Font size for the markdown editor"
+        },
+        "ultraview.markdown.showStatusBar": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show the status bar with line/word/char counts"
+        },
+        "ultraview.markdown.wordWrap": {
+          "type": "boolean",
+          "default": true,
+          "description": "Enable word wrap in the editor"
+        },
+        "ultraview.codeGraph.nodeSize": {
+          "type": "number",
+          "default": 20,
+          "description": "Size of nodes in the code graph"
+        },
+        "ultraview.codeGraph.fontSize": {
+          "type": "number",
+          "default": 12,
+          "description": "Font size for node labels"
+        },
+        "ultraview.codeGraph.showLabels": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show labels on graph nodes"
+        },
+        "ultraview.codeGraph.layoutDirection": {
+          "type": "string",
+          "default": "horizontal",
+          "enum": [
+            "horizontal",
+            "vertical",
+            "radial"
+          ],
+          "description": "Direction of the graph layout"
+        },
+        "ultraview.codeGraph.clusterBy": {
+          "type": "string",
+          "default": "folder",
+          "enum": [
+            "file",
+            "folder",
+            "none"
+          ],
+          "description": "How to cluster nodes in the graph"
+        },
+        "ultraview.codeGraph.showImports": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show import relationships"
+        },
+        "ultraview.codeGraph.showExports": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show export relationships"
+        },
+        "ultraview.database.pageSize": {
+          "type": "number",
+          "default": 200,
+          "description": "Number of rows per page in database viewer"
+        },
+        "ultraview.database.showRowNumbers": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show row numbers in database tables"
+        },
+        "ultraview.database.maxColumnWidth": {
+          "type": "number",
+          "default": 320,
+          "description": "Maximum width of columns in pixels"
+        },
+        "ultraview.database.nullDisplay": {
+          "type": "string",
+          "default": "NULL",
+          "description": "Text to display for NULL values"
+        },
+        "ultraview.database.dateFormat": {
+          "type": "string",
+          "default": "locale",
+          "description": "Date format for displaying dates"
+        },
+        "ultraview.database.showSqlToolbar": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show the SQL query toolbar"
+        },
+        "ultraview.database.autoQueryLimit": {
+          "type": "number",
+          "default": 1000,
+          "description": "Maximum rows returned by auto-queries"
+        }
+      }
+    },
     "viewsContainers": {
       "activitybar": [
         {
