--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ultraview",
   "icon": "images/icon.png",
-  "displayName": "Ultraview – Database & Markdown File Viewer",
-  "description": "Instantly preview SQLite, DuckDB, Access, SQL dump files and Markdown directly from the file tree – no connection setup needed. (Ultraview)",
-  "version": "0.2.81",
+  "displayName": "Ultraview – All in One VS Code Extension",
+  "description": "All-in-one VS Code extension: database viewer, markdown editor, interactive code graph, Git account manager, and cross-IDE project sync — all inside VS Code with zero setup.",
+  "version": "0.2.83",
   "publisher": "Da3n0n",
   "engines": {
     "vscode": "^1.85.0"
@@ -290,6 +290,16 @@
       {
         "command": "ultraview.refreshCustomComments",
         "title": "Ultraview: Refresh Custom Comments CSS"
+      },
+      {
+        "command": "ultraview.setSyncFolder",
+        "title": "Ultraview: Set Cross-IDE Sync Folder",
+        "icon": "$(folder-opened)"
+      },
+      {
+        "command": "ultraview.showSyncFolder",
+        "title": "Ultraview: Show Sync Folder in Explorer",
+        "icon": "$(folder)"
       }
     ],
     "customEditors": [
