--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ultraview",
   "icon": "images/icon.png",
-  "displayName": "Ultraview – All in One VS Code Extension",
-  "description": "All-in-one VS Code extension: database viewer, markdown editor, interactive code graph, Git account manager, and cross-IDE project sync — all inside VS Code with zero setup.",
-  "version": "0.2.109",
+  "displayName": "Ultraview â€“ All in One VS Code Extension",
+  "description": "All-in-one VS Code extension: database viewer, markdown editor, interactive code graph, Git account manager, and cross-IDE project sync â€” all inside VS Code with zero setup.",
+  "version": "0.2.110",
   "publisher": "Da3n0n",
   "engines": {
     "vscode": "^1.85.0"
@@ -432,6 +432,73 @@
           },
           {
             "filenamePattern": "*.ndx"
+          }
+        ],
+        "priority": "default"
+      },
+      {
+        "viewType": "ultraview.model3d",
+        "displayName": "3D Model Viewer",
+        "selector": [
+          {
+            "filenamePattern": "*.glb"
+          },
+          {
+            "filenamePattern": "*.gltf"
+          },
+          {
+            "filenamePattern": "*.fbx"
+          },
+          {
+            "filenamePattern": "*.obj"
+          },
+          {
+            "filenamePattern": "*.stl"
+          },
+          {
+            "filenamePattern": "*.ply"
+          },
+          {
+            "filenamePattern": "*.3dm"
+          },
+          {
+            "filenamePattern": "*.usdz"
+          },
+          {
+            "filenamePattern": "*.3ds"
+          },
+          {
+            "filenamePattern": "*.3mf"
+          },
+          {
+            "filenamePattern": "*.dae"
+          },
+          {
+            "filenamePattern": "*.amf"
+          },
+          {
+            "filenamePattern": "*.bvh"
+          },
+          {
+            "filenamePattern": "*.vox"
+          },
+          {
+            "filenamePattern": "*.pcd"
+          },
+          {
+            "filenamePattern": "*.vtk"
+          },
+          {
+            "filenamePattern": "*.xyz"
+          },
+          {
+            "filenamePattern": "*.wrl"
+          },
+          {
+            "filenamePattern": "*.blend"
+          },
+          {
+            "filenamePattern": "*.blend1"
           }
         ],
         "priority": "default"
