--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "icon": "images/icon.png",
   "displayName": "Ultraview â€“ All in One VS Code Extension",
   "description": "All-in-one VS Code extension: database viewer, markdown editor, interactive code graph, Git account manager, and cross-IDE project sync â€” all inside VS Code with zero setup.",
-  "version": "0.2.110",
+  "version": "0.2.111",
   "publisher": "Da3n0n",
   "engines": {
     "vscode": "^1.85.0"
@@ -315,8 +315,22 @@
         "command": "ultraview.showSyncFolder",
         "title": "Ultraview: Show Sync Folder in Explorer",
         "icon": "$(folder)"
+      },
+      {
+        "command": "ultraview.forceDelete",
+        "title": "Force Delete",
+        "icon": "$(trash)"
       }
     ],
+    "menus": {
+      "explorer/context": [
+        {
+          "command": "ultraview.forceDelete",
+          "group": "7_modification",
+          "when": "resourceScheme == 'file'"
+        }
+      ]
+    },
     "customEditors": [
       {
         "viewType": "ultraview.sqlite",
